Revert "Revert "Fix gap at top of page gradient""
This reverts commit 85758f157df7a85ac0ae839edfccd2cc796c6956.

--- a/aiarena/frontend/static/style.css
+++ b/aiarena/frontend/static/style.css
@@ -47,7 +47,7 @@ ul.pagination a {
 }
 
 body {
-    margin-bottom: 25px;
+    margin: 0 0 25px 0;
     padding: 0;
     background-color: rgb(0, 4, 1);
     background-image: url("/static/img/background.gif");
